# se-toolkit-hackathon

./: README.md  REPORT.md
.qwen/: settings.json
backend/src/lms_backend/: main.py
caddy/: Caddyfile
client-web-react/src/: App.css  App.tsx  App.tsx.bak
nanobot-websocket-channel/: .dockerignore  .gitignore  README.md  architecture.md  pyproject.toml
nanobot-websocket-channel/client-telegram-bot/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
nanobot-websocket-channel/client-telegram-bot/src/client_telegram_bot/: __init__.py  __main__.py  bot.py  logging_config.py  settings.py
nanobot-websocket-channel/client-telegram-bot/src/client_telegram_bot/handlers/: __init__.py  commands.py  intent_router.py  messages.py  renderer.py  session.py
nanobot-websocket-channel/client-telegram-bot/src/client_telegram_bot/services/: nanobot_client.py
nanobot-websocket-channel/client-web-flutter/: pubspec.yaml
nanobot-websocket-channel/client-web-flutter/lib/: chat_screen.dart  llm_service.dart  login_screen.dart  main.dart  protocol.dart
nanobot-websocket-channel/client-web-flutter/web/: index.html  manifest.json
nanobot-websocket-channel/mcp-webchat/: pyproject.toml
nanobot-websocket-channel/mcp-webchat/src/mcp_webchat/: __init__.py  __main__.py  server.py  ui_relay.py
nanobot/workspace/cron/: jobs.json
nanobot/workspace/memory/: HISTORY.md
plans/: README.md  implementation.md
qwen-code-api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
qwen-code-api/src/qwen_code_api/: auth.py  config.py  headers.py  logging_config.py  (+2 more)
(+7 files in other folders)
