[project]
name = "mcp-webchat"
version = "0.1.0"
description = "MCP tools for the nanobot WebChat channel"
requires-python = "==3.14.*"
dependencies = [
    "httpx>=0.28.0,<1.0.0",
    "mcp>=1.26.0,<2.0.0",
    "nanobot-channel-protocol",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
nanobot-channel-protocol = { workspace = true }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_webchat*"]
